[metadata]
name = pypub
version = 1.0.0-alpha.1
author = rk0cc
author_email = enquiry@rk0cc.xyz
description = Dart pub packages repository API client in Python
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Dart
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP

[options]
install_requires =
    versions>=1.6
    requests>=2.31
packages = pypub
python_requires = >=3.9, <4