[metadata]
name = pydartpub
version = 1.0.0-alpha.1
author = rk0cc
author_email = enquiry@rk0cc.xyz
description = Dart pub packages repository API client in Python
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Dart
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
keywords = 
    Dart
    Flutter
    pub
    REST
    API

[options]
install_requires =
    versions
packages = find:
python_requires = >=3.9, <4
